--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,13 @@ services:
       context: .
       dockerfile: Dockerfile
     volumes:
-      - 'web-volume:/usr/src/app'
-      - '/usr/local/lib'
+      - 'node-cache:/root/.npm'
+      - 'bs-cache:/usr/local/lib'
     ports:
       - '3001:3000'
     environment:
       - NODE_ENV=development
 
 volumes:
-  web-volume:
+  node-cache:
+  bs-cache:
