--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - 'node-cache:/root/.npm'
+      - 'node-cache:/usr/src/app/node_modules'
       - 'bs-cache:/usr/local/lib'
     ports:
       - '3001:3000'
