chore: move reason app into ./web

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,13 @@ services:
   web:
     container_name: web
     build:
-      context: .
+      context: ./web
       dockerfile: Dockerfile
     volumes:
       - 'node-cache:/root/.npm'
       - 'node-cache:/usr/src/app/node_modules'
       - 'bs-cache:/usr/local/lib'
+      - ${PWD}/web:/web
     ports:
       - '3000:3000'
       - '35729:35729'
