--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/web/node_modules
 
 # testing
 /coverage
@@ -10,7 +10,7 @@
 /build
 
 # bucklescript
-/lib
+/web/lib
 /types
 .merlin
 *.bs.js
