chore: add nodemon to server to hot reload

--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,11 @@
   "name": "shop-sharer-server",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.18.9"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
