chore: add reason-cli install to web dockerfile script

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -6,6 +6,9 @@ RUN set -ex
 RUN PATH=/usr/local/bin:$PATH
 RUN yarn global add bs-platform
 
+# Add reason-cli to container to enable refmt command
+RUN yarn global add reason-cli@latest-linux
+
 
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
@@ -19,6 +22,8 @@ RUN yarn install
 # Copy public files into container
 COPY public/ ./public/
 
+# Copy scripts into container
+COPY scripts/ ./scripts/
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
 
 COPY docker-entrypoint.sh ./docker-entrypoint.sh
