chore update Dockerfile following discussion with DBR

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,21 +4,12 @@ RUN set -ex
 
 #install sequelize cli to be able to run commands on the container
 ENV PATH /usr/src/app/node_modules/.bin:$PATH
+
+# install this as a dev dependency and run with yarn sequelize
 RUN yarn global add sequelize-cli
 
 RUN mkdir /usr/src/app
 WORKDIR /usr/src/app
-
-
-# Copy packge files into app and install
-COPY ./ ./
-# Copy .sequelizerc - why doesn't this happen above?
-COPY .sequelizerc ./.sequelizerc
-RUN yarn install
-
-# Copy public files into container
-COPY app.js ./app.js
-COPY src/ ./src
 
 COPY docker-entrypoint.sh ./docker-entrypoint.sh
 RUN chmod +x ./docker-entrypoint.sh
