--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
       - server_node_modules:/usr/src/app/node_modules
     ports:
       - '5000:5000'
-    
+    env_file:
+      - ./server/.server.env
+
   db:
     container_name: db
     build:
